# prompt2slip

./: .all-contributorsrc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: example_haggingface_gpt2.py
prompt2slip/: __init__.py  base_attacker.py  calc_loss.py  loss_transformers.py  transformers_attacker.py  utils.py
tests/: test_HFBase_attacker.py  test_attacker.py  test_transformer_attacker.py  text4test.txt
