[tool.poetry]
name = "prompt2slip"
version = "0.0.0"
description = ""
authors = [
    "akiFQC <yakaredori@gmail.com>",
    "kajyuuen <kajyuuen@gmail.com>",
    "U-Not <euno.eng@gmail.com>",
    "task4233 <mail@task4233.dev>"
]

[tool.poetry.dependencies]
python = ">=3.8"  
torch = "^1.10.0"
torchtyping = "^0.1.4"
transformers = "^4.11.3"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^21.9b0"

[tool.poetry-version-plugin]
source = "git-tag"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
